# face-group

./: .gitignore  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml  main.yml  pypi.yml
face_group/: __init__.py  api.py  cli.py  utils.py
tests/: test_face_sort.py
