[tool.poetry]
name = "face-group"
version = "0.1.7"
description = "Grouping rgb and infra people`s faces by folders using face features."
authors = ["irlirion <irlirion@protonmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Irlirion/face-group"

[tool.poetry.dependencies]
python = "^3.8"
face-recognition = "^1.3.0"
rich = "^9.11.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.8.4"
mypy = "^0.800"
isort = "^5.7.0"
flit = "^3.0.0"
tox = "^3.22.0"
coverage = "^5.4"
mccabe = "^0.6.1"
pylint = "^2.6.2"
tox-poetry-installer = {extras = ["poetry"], version = "^0.6.4"}
pytest-cov = "^2.11.1"

[tool.poetry.scripts]
face-group = 'face_group.cli:group_faces'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
